--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,31 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta property="og:title" content="Jems Yadav | Developer | Designer | Explorer | Links" />
+    <meta property="og:site_name" content="Jems Yadav | Developer | Designer | Explorer | Links" />
+    <meta property="og:url" content="https://jems.co/" />
+    <meta property="og:description" content="This is landing page for Jems Yadav , a Developer, a Designer and an Explorer." />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="https://i.imgur.com/v5KS19zl.jpg" />
+    <meta name="title" content="Jems Yadav | Developer | Designer | Explorer | Links" />
+    <meta name="description" content="This is landing page for Jems Yadav, a Developer, a Designer and an Explorer." />
+    <meta name="keywords" content=", Jems Yadav, LinkTree, Links" />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://jems.co/" />
+    <meta property="twitter:title" content="Jems Yadav | Developer | Designer | Explorer | Links" />
+    <meta property="twitter:description" content="This is landing page for Jems Yadav, a Developer, a Designer and an Explorer." />
+    <meta property="twitter:image" content="https://i.imgur.com/v5KS19zl.jpg" />
+    <link rel="shortcut icon" type="image/png" href="https://i.imgur.com/v5KS19zl.jpg" />
+    <title>Jems Yadav | Links</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Baloo+2:wght@400;600&display=swap" rel="stylesheet" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.0/css/all.min.css" />
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+    <link href="./style.css" type="text/css" rel="stylesheet" />
     <title>React App</title>
   </head>
   <body>
